<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    android:elevation="4dp"
    android:layout_margin="2dp"
    android:background="@color/white"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="15dp"
                android:maxLines="2"
                android:text="@string/main_heading"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="10dp"
                >

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/default_image"
                android:scaleType="fitXY"
                android:contentDescription="@string/no_image_found"
                />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:layout_marginVertical="12dp"
                android:maxLines="8"
                android:ellipsize="end"
                android:text="@string/this_is_a_sample_text"
                />


        </LinearLayout>

        </LinearLayout>


</androidx.cardview.widget.CardView>